--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
   <div class="pikachu">
     <div class="ear left"></div>
     <div class="ear right"></div>
+
     <div class="face">
-      <div class="eye left"></div>
-      <div class="eye right"></div>
+      <div class="eye left">
+        <div class="shine"></div>
+      </div>
+      <div class="eye right">
+        <div class="shine"></div>
+      </div>
+
       <div class="nose"></div>
-      <div class="mouth"></div>
+
+      <div class="mouth">
+        <div class="tongue"></div>
+      </div>
+
       <div class="cheek left"></div>
       <div class="cheek right"></div>
     </div>
