--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
   <div class="pikachu">
     <div class="ear left"></div>
     <div class="ear right"></div>
-
-    <div class="face">
-      <div class="eye left">
-        <div class="shine"></div>
-      </div>
-      <div class="eye right">
-        <div class="shine"></div>
-      </div>
-
+    
+    <div class="head">
+      <div class="eye left"><div class="shine"></div></div>
+      <div class="eye right"><div class="shine"></div></div>
       <div class="nose"></div>
-
       <div class="mouth">
+        <div class="smile"></div>
         <div class="tongue"></div>
       </div>
-
       <div class="cheek left"></div>
       <div class="cheek right"></div>
     </div>
+
+    <div class="body"></div>
+    <div class="arm left"></div>
+    <div class="arm right"></div>
+    <div class="foot left"></div>
+    <div class="foot right"></div>
+    <div class="tail"></div>
   </div>
 </body>
 </html>
