--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pika Pika Pikachu!</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>3D Pikachu</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="pikachu">
+  <div class="pikachu-3d">
     <div class="ear left"></div>
     <div class="ear right"></div>
-    
+
     <div class="head">
       <div class="eye left"><div class="shine"></div></div>
       <div class="eye right"><div class="shine"></div></div>
       <div class="nose"></div>
-      <div class="mouth">
-        <div class="smile"></div>
-        <div class="tongue"></div>
-      </div>
+      <div class="mouth"><div class="smile"></div><div class="tongue"></div></div>
       <div class="cheek left"></div>
       <div class="cheek right"></div>
     </div>
