--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>3D Pikachu</title>
+  <title>Realistic CSS Pikachu</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="pikachu-3d">
+  <div class="pikachu">
     <div class="ear left"></div>
     <div class="ear right"></div>
 
@@ -15,16 +15,26 @@
       <div class="eye left"><div class="shine"></div></div>
       <div class="eye right"><div class="shine"></div></div>
       <div class="nose"></div>
-      <div class="mouth"><div class="smile"></div><div class="tongue"></div></div>
+      <div class="mouth">
+        <div class="smile"></div>
+        <div class="tongue"></div>
+      </div>
       <div class="cheek left"></div>
       <div class="cheek right"></div>
     </div>
 
-    <div class="body"></div>
-    <div class="arm left"></div>
-    <div class="arm right"></div>
-    <div class="foot left"></div>
-    <div class="foot right"></div>
+    <div class="body">
+      <div class="stripe"></div>
+      <div class="arm left"></div>
+      <div class="arm right"></div>
+      <div class="foot left">
+        <div class="claw"></div>
+      </div>
+      <div class="foot right">
+        <div class="claw"></div>
+      </div>
+    </div>
+
     <div class="tail"></div>
   </div>
 </body>
